apsp-client-sdk/src/main/java/com/zmcsoft/apsp/client/sdk/drivers/ms/IccdllLibrary.java

package com.zmcsoft.apsp.client.sdk.drivers.ms;

import com.sun.jna.Native;
import com.sun.jna.NativeLibrary;
import com.sun.jna.Pointer;
import com.sun.jna.ptr.IntByReference;
import com.sun.jna.win32.StdCallLibrary;

import java.nio.ByteBuffer;
import java.nio.IntBuffer;

/**
 * JNA Wrapper for library <b>56iccdll</b><br>
 * This file was autogenerated by <a href="http://jnaerator.googlecode.com/">JNAerator</a>,<br>
 * a tool written by <a href="http://ochafik.com/">Olivier Chafik</a> that <a href="http://code.google.com/p/jnaerator/wiki/CreditsAndLicense">uses a few opensource projects.</a>.<br>
 * For help, please visit <a href="http://nativelibs4java.googlecode.com/">NativeLibs4Java</a> , <a href="http://rococoa.dev.java.net/">Rococoa</a>, or <a href="http://jna.dev.java.net/">JNA</a>.
 */
public interface IccdllLibrary extends StdCallLibrary {
	public static final String JNA_LIBRARY_NAME = "56iccdll";
	public static final NativeLibrary JNA_NATIVE_LIB = NativeLibrary.getInstance(IccdllLibrary.JNA_LIBRARY_NAME);
	public static final IccdllLibrary INSTANCE = (IccdllLibrary)Native.loadLibrary(IccdllLibrary.JNA_LIBRARY_NAME, IccdllLibrary.class);
	/**
	 * Original signature : <code>int OpenPort(char*, char, int, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:5</i><br>
	 * @deprecated use the safer methods {@link #OpenPort(ByteBuffer, byte, int, int)} and {@link #OpenPort(Pointer, byte, int, int)} instead
	 */
	@Deprecated
	int OpenPort(Pointer szDevName, byte cExternPort, int nBautrate, int nTimeout);
	/**
	 * Original signature : <code>int OpenPort(char*, char, int, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:5</i>
	 */
	int OpenPort(ByteBuffer szDevName, byte cExternPort, int nBautrate, int nTimeout);
	/**
	 * Original signature : <code>void ClosePort()</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:6</i>
	 */
	void ClosePort();
	/**
	 * Original signature : <code>int getIsCom()</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:7</i>
	 */
	int getIsCom();
	/**
	 * Original signature : <code>int readChar(unsigned char*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:8</i><br>
	 * @deprecated use the safer methods {@link #readChar(ByteBuffer, int)} and {@link #readChar(Pointer, int)} instead
	 */
	@Deprecated
	int readChar(Pointer pucChar, int nTimeout);
	/**
	 * Original signature : <code>int readChar(unsigned char*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:8</i>
	 */
	int readChar(ByteBuffer pucChar, int nTimeout);
	/**
	 * Original signature : <code>int ReadStr(unsigned char*, int, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:9</i><br>
	 * @deprecated use the safer methods {@link #ReadStr(ByteBuffer, int, int)} and {@link #ReadStr(Pointer, int, int)} instead
	 */
	@Deprecated
	int ReadStr(Pointer uszData, int nReadLen, int nTimeout);
	/**
	 * Original signature : <code>int ReadStr(unsigned char*, int, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:9</i>
	 */
	int ReadStr(ByteBuffer uszData, int nReadLen, int nTimeout);
	/**
	 * Original signature : <code>int DeviceRead(unsigned char*, DWORD*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:10</i><br>
	 * @deprecated use the safer methods {@link #DeviceRead(ByteBuffer, IntBuffer, int)} and {@link #DeviceRead(Pointer, IntByReference, int)} instead
	 */
	@Deprecated
	int DeviceRead(Pointer pBuffer, IntByReference pdwSize, int nTimeout);
	/**
	 * Original signature : <code>int DeviceRead(unsigned char*, DWORD*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:10</i>
	 */
	int DeviceRead(ByteBuffer pBuffer, IntBuffer pdwSize, int nTimeout);
	/**
	 * Original signature : <code>int Msr_WriteStr(unsigned char*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:11</i><br>
	 * @deprecated use the safer methods {@link #Msr_WriteStr(ByteBuffer, int)} and {@link #Msr_WriteStr(Pointer, int)} instead
	 */
	@Deprecated
	int Msr_WriteStr(Pointer uszData, int nDatalen);
	/**
	 * Original signature : <code>int Msr_WriteStr(unsigned char*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:11</i>
	 */
	int Msr_WriteStr(ByteBuffer uszData, int nDatalen);
	/**
	 * Original signature : <code>int Msr_DeviceWrite(unsigned char*, DWORD)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:12</i><br>
	 * @deprecated use the safer methods {@link #Msr_DeviceWrite(ByteBuffer, int)} and {@link #Msr_DeviceWrite(Pointer, int)} instead
	 */
	@Deprecated
	int Msr_DeviceWrite(Pointer lpBudder, int dwSize);
	/**
	 * Original signature : <code>int Msr_DeviceWrite(unsigned char*, DWORD)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:12</i>
	 */
	int Msr_DeviceWrite(ByteBuffer lpBudder, int dwSize);
	/**
	 * Original signature : <code>char ascToBcd(unsigned char*, unsigned char*, unsigned int, unsigned char)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:13</i><br>
	 * @deprecated use the safer methods {@link #ascToBcd(ByteBuffer, ByteBuffer, int, byte)} and {@link #ascToBcd(Pointer, Pointer, int, byte)} instead
	 */
	@Deprecated
	byte ascToBcd(Pointer psBcd, Pointer psAsc, int nLen, byte byMode);
	/**
	 * Original signature : <code>char ascToBcd(unsigned char*, unsigned char*, unsigned int, unsigned char)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:13</i>
	 */
	byte ascToBcd(ByteBuffer psBcd, ByteBuffer psAsc, int nLen, byte byMode);
	/**
	 * Original signature : <code>void bcdToAsc(unsigned char*, unsigned char*, unsigned int, unsigned char)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:19</i><br>
	 * @deprecated use the safer methods {@link #bcdToAsc(ByteBuffer, ByteBuffer, int, byte)} and {@link #bcdToAsc(Pointer, Pointer, int, byte)} instead
	 */
	@Deprecated
	void bcdToAsc(Pointer psAsc, Pointer psBcd, int nLen, byte byMode);
	/**
	 * Original signature : <code>void bcdToAsc(unsigned char*, unsigned char*, unsigned int, unsigned char)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:19</i>
	 */
	void bcdToAsc(ByteBuffer psAsc, ByteBuffer psBcd, int nLen, byte byMode);
	/**
	 * Original signature : <code>int Icc_EXApdu(int, unsigned char*, int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:24</i><br>
	 * @deprecated use the safer methods {@link #Icc_EXApdu(int, ByteBuffer, int, ByteBuffer, IntBuffer)} and {@link #Icc_EXApdu(int, Pointer, int, Pointer, IntByReference)} instead
	 */
	@Deprecated
	int Icc_EXApdu(int nSlot, Pointer uszApdu, int nApduLen, Pointer uszResponse, IntByReference pnResplen);
	/**
	 * Original signature : <code>int Icc_EXApdu(int, unsigned char*, int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:24</i>
	 */
	int Icc_EXApdu(int nSlot, ByteBuffer uszApdu, int nApduLen, ByteBuffer uszResponse, IntBuffer pnResplen);
	/**
	 * Original signature : <code>int star_CloseIcc(int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:25</i>
	 */
	int star_CloseIcc(int nSlot);
	/**
	 * Original signature : <code>int star_OpenIcc_Time2(int, unsigned int, unsigned char*, unsigned int*, int, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:26</i><br>
	 * @deprecated use the safer methods {@link #star_OpenIcc_Time2(int, int, ByteBuffer, IntBuffer, int, IntBuffer)} and {@link #star_OpenIcc_Time2(int, int, Pointer, IntByReference, int, IntByReference)} instead
	 */
	@Deprecated
	int star_OpenIcc_Time2(int nIcSlot, int nICReadMode, Pointer uszResponse, IntByReference pnResponseLen, int nTimeout, IntByReference ICTypeback);
	/**
	 * Original signature : <code>int star_OpenIcc_Time2(int, unsigned int, unsigned char*, unsigned int*, int, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:26</i>
	 */
	int star_OpenIcc_Time2(int nIcSlot, int nICReadMode, ByteBuffer uszResponse, IntBuffer pnResponseLen, int nTimeout, IntBuffer ICTypeback);
	/**
	 * Original signature : <code>int star_OpenIcc_Time(int, unsigned int, unsigned char*, unsigned int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:27</i><br>
	 * @deprecated use the safer methods {@link #star_OpenIcc_Time(int, int, ByteBuffer, IntBuffer, int)} and {@link #star_OpenIcc_Time(int, int, Pointer, IntByReference, int)} instead
	 */
	@Deprecated
	int star_OpenIcc_Time(int nIcSlot, int nICReadMode, Pointer uszResponse, IntByReference pnResponseLen, int nTimeout);
	/**
	 * Original signature : <code>int star_OpenIcc_Time(int, unsigned int, unsigned char*, unsigned int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:27</i>
	 */
	int star_OpenIcc_Time(int nIcSlot, int nICReadMode, ByteBuffer uszResponse, IntBuffer pnResponseLen, int nTimeout);
	/**
	 * Original signature : <code>int Star_OpenIcc(int, unsigned int, unsigned char*, unsigned int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:28</i><br>
	 * @deprecated use the safer methods {@link #Star_OpenIcc(int, int, ByteBuffer, IntBuffer, int)} and {@link #Star_OpenIcc(int, int, Pointer, IntByReference, int)} instead
	 */
	@Deprecated
	int Star_OpenIcc(int nIcSlot, int nICReadMode, Pointer uszResponse, IntByReference pnResponseLen, int nTimeout);
	/**
	 * Original signature : <code>int Star_OpenIcc(int, unsigned int, unsigned char*, unsigned int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:28</i>
	 */
	int Star_OpenIcc(int nIcSlot, int nICReadMode, ByteBuffer uszResponse, IntBuffer pnResponseLen, int nTimeout);
	/**
	 * Original signature : <code>int HexToAsciibuf(unsigned char, unsigned char*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:29</i><br>
	 * @deprecated use the safer methods {@link #HexToAsciibuf(byte, ByteBuffer)} and {@link #HexToAsciibuf(byte, Pointer)} instead
	 */
	@Deprecated
	int HexToAsciibuf(byte ucNumber, Pointer uszAsciibuf);
	/**
	 * Original signature : <code>int HexToAsciibuf(unsigned char, unsigned char*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:29</i>
	 */
	int HexToAsciibuf(byte ucNumber, ByteBuffer uszAsciibuf);
	/**
	 * Original signature : <code>char TwoAsciiToHex(unsigned char, unsigned char)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:30</i>
	 */
	byte TwoAsciiToHex(byte ucAscii0, byte ucAscii1);
	/**
	 * Original signature : <code>int Icc_OpenPort(int, char, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:32</i>
	 */
	int Icc_OpenPort(int nPort, byte cExternPort, int nBautrate);
	/**
	 * Original signature : <code>int Icc_PowerOn(int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:33</i><br>
	 * @deprecated use the safer methods {@link #Icc_PowerOn(int, ByteBuffer, IntBuffer)} and {@link #Icc_PowerOn(int, Pointer, IntByReference)} instead
	 */
	@Deprecated
	int Icc_PowerOn(int nICReadMode, Pointer uszOutdata, IntByReference pnOutDataLen);
	/**
	 * Original signature : <code>int Icc_PowerOn(int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:33</i>
	 */
	int Icc_PowerOn(int nICReadMode, ByteBuffer uszOutdata, IntBuffer pnOutDataLen);
	/**
	 * Original signature : <code>int Icc_SendCommand(unsigned char*, int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:34</i><br>
	 * @deprecated use the safer methods {@link #Icc_SendCommand(ByteBuffer, int, ByteBuffer, IntBuffer)} and {@link #Icc_SendCommand(Pointer, int, Pointer, IntByReference)} instead
	 */
	@Deprecated
	int Icc_SendCommand(Pointer uszApdu, int nApdulen, Pointer uszResp, IntByReference pnRespLen);
	/**
	 * Original signature : <code>int Icc_SendCommand(unsigned char*, int, unsigned char*, int*)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:34</i>
	 */
	int Icc_SendCommand(ByteBuffer uszApdu, int nApdulen, ByteBuffer uszResp, IntBuffer pnRespLen);
	/**
	 * Original signature : <code>int Icc_GetCardStatus()</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:35</i>
	 */
	int Icc_GetCardStatus();
	/**
	 * Original signature : <code>int Icc_PowerOff()</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:36</i>
	 */
	int Icc_PowerOff();
	/**
	 * Original signature : <code>int Icc_ClosePort()</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:37</i>
	 */
	int Icc_ClosePort();
	/**
	 * Original signature : <code>int Icc_ReadVersion(char*, int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:38</i><br>
	 * @deprecated use the safer methods {@link #Icc_ReadVersion(ByteBuffer, IntBuffer, int)} and {@link #Icc_ReadVersion(Pointer, IntByReference, int)} instead
	 */
	@Deprecated
	int Icc_ReadVersion(Pointer uszVersion, IntByReference pnVerlen, int nTimeout);
	/**
	 * Original signature : <code>int Icc_ReadVersion(char*, int*, int)</code><br>
	 * <i>native declaration : drivers\iccrad\56iccdll.h:38</i>
	 */
	int Icc_ReadVersion(ByteBuffer uszVersion, IntBuffer pnVerlen, int nTimeout);
}
